--- a/index.html
+++ b/index.html
@@ -3,9 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel = "stylesheet" href="style.css">
     <title>Document</title>
 </head>
 <body>
-    
+    <header> 
+        <image src="Emman.jpg" alt="jay"></image>
+        <h1>Jayanthonycorp.</h1>
+        <hr>
+
+        <section class ="hey"> 
+            <image src="ewe.jpg" alt="roblox"></image>
+            <h2> roblox</h2>
+            <p>is an online game platform and game creation system developed by Roblox Corporation that allows users to program and play games created by themselves or other users.</p>
+        </section>
+
+
+    </header>
+    <h1></h1>
 </body>
 </html>
